[tool.poetry]
name = "ip_enrich"
version = "0.1.0"
description = "Enrich IP addresses with metadata and threat intelligence indicators."
authors = ["Sebastian Garcia <eldraco@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
